# TaskManager

./: .gitignore  CMakeLists.txt  LocalConfig.cmake  NetworkPerformanceItem.h  NetworkPerformanceScanner.h  ProcessInfo.h  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  net.cpp  process_info.cpp
